[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 2.0
margin_top = 75.0
margin_right = 312.0
margin_bottom = 172.0
text = ".... logs goes here ...."
align = 1

[node name="Button" type="Button" parent="."]
margin_left = 4.17137
margin_top = 52.0588
margin_right = 78.1714
margin_bottom = 72.0587
text = "Send ping"

[node name="Server" type="Button" parent="."]
margin_left = 34.3721
margin_top = 10.5119
margin_right = 143.372
margin_bottom = 30.5119
text = "Become Server"

[node name="Client" type="Button" parent="."]
margin_left = 155.509
margin_top = 11.513
margin_right = 261.509
margin_bottom = 31.513
text = "Become Client"
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Server" to="." method="host_game" binds= [ 1030 ]]
[connection signal="pressed" from="Client" to="." method="join_game" binds= [ "127.0.0.1", 1030 ]]
